force-app/main/default/objects/Plan__c/Plan__c.object-meta.xml
<CustomObject>
    <description>Captures plan details.</description>
    <label>Plan</label>
    <nameField>
        <displayFormat>Plan-{0000}</displayFormat>
        <label>Plan Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>