force-app/main/default/objects/Plan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Captures plan details.</description>
    <inlineHelpText>Captures plan details.</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>