force-app/main/default/objects/Plan__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Captures validity in months.</description>
    <inlineHelpText>Number of months.</inlineHelpText>
    <label>Duration</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>