force-app/main/default/objects/Plan__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this plan active</description>
    <inlineHelpText>Is this plan active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>