force-app/main/default/objects/Plan__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <description>Captures Plan Name.</description>
    <inlineHelpText>Captures Plan Name.</inlineHelpText>
    <label>Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>