force-app/main/default/objects/Plan__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Captures rate of a plan.</description>
    <inlineHelpText>Captures rate of a plan.</inlineHelpText>
    <label>Price</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>