force-app/main/default/objects/Plan__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Enter your Circle.</description>
    <inlineHelpText>Enter your Circle.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mp &amp; Chattisgarh</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Up(East)</fullName>
            </value>
            <value>
                <fullName>Up(West)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>