force-app/main/default/objects/Plan__c/recordTypes/Pospaid.recordType-meta.xml
<RecordType>
    <fullName>Pospaid</fullName>
    <active>true</active>
    <label>Pospaid</label>
</RecordType>