force-app/main/default/objects/Plan__c/recordTypes/Prepaid.recordType-meta.xml
<RecordType>
    <fullName>Prepaid</fullName>
    <active>true</active>
    <label>Prepaid</label>
</RecordType>